Removes or replaces uses of deprecated APIs and commented code